# py_web_player

mpyg321/: README.md
mpyg321/examples/: basic.py
mpyg321/mpyg321/: BasePlayer.py  MPyg123Player.py  consts.py
py_web_player/: .flaskenv  .gitignore  README.md  setup.cfg  start_server.py
py_web_player/sandbox/: subprocess.py
py_web_player/src/py_web_player/: __init__.py  routes.py
py_web_player/src/py_web_player/static/: style.css
py_web_player/src/py_web_player/templates/: mpg123_status_widget.html  playlist.html  views.html
sandbox/: subprocess_with_sarge.py
