
[metadata]
name = py_web_player
version = 0.0.1
description = PACS and DICOM tools
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD 3-Clause License
url = https://www.med.umich.edu/surgery/morphomics/
project_urls=
    Source=https://github.com/umrosbrian/imgex

[options]
package_dir=
    =src
packages=find:
# required dependencies, see https://setuptools.pypa.io/en/latest/userguide/quickstart.html#dependency-management
install_requires =
    flask
    python-dotenv

[options.packages.find]
where=src
install_requires =
    importlib; python_version >= "3.0"